--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -45,7 +45,7 @@
                                                              alt="Command logo"></a></li>
             <li class="nav-item" style="margin-left: 50px;"><a href="{% url 'home' %}" class="btn btn-success"
                                                                aria-current="page">Проверка</a></li>
-            <li class="nav-item" style="margin-left: 30px;"><a href="{% url 'producers' %}" class="btn btn-success"
+            <li class="nav-item" style="margin-left: 30px;"><a href="{% url 'map' %}" class="btn btn-success"
                                                                aria-current="page">Карта безопасной продукции</a></li>
         </ul>
         <ul class="nav">
